[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"

[build-dependencies]
tauri-build = { version = "2.2.3" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.3", features = ["custom-protocol"] }
tauri-plugin = "2.2.3"
tauri-plugin-shell = "2.3.5"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
