[package]
name = "causal_one"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.2.3", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# h_pt = { path = "../h_pt" } ← هذا لو المصنع عندك، لا تلمسه

[build-dependencies]
tauri-build = { version = "2.2.3" }
